@@ -7,6 +7,7 @@ Version 0.13 (TBA)
  * implemented project-wide Find declaration (Project/Find declaration) (Dan Lucraft)
  * Don't use Bundler when running as a gem (Dan Lucraft)
  * Parse Ruby with 1.9 syntax instead of 1.8 (Dan Lucraft)
+ * Made the auto indenter ignore blank lines when deciding on indentation. (Dan Lucraft)
 
 Version 0.12 (7th January 2012)
 ===============================
